swen430as2/test_files/valid/unions/UnionType_Valid_12.while
type Record_1 is { int|null field } 
type Record_2 is { int field } | { null field }

Record_2 f(Record_1 r) {
    return r;
}

void main() {
    assert f({field: 1}) == {field: 1};
    assert f({field: null}) == {field: null}; 
}