swen430as2/test_files/invalid/is/Is_Invalid_03-TC03.while

void f() {

}

void main() {
    assert f() is int;
}
